--- a/style.css
+++ b/style.css
@@ -30,13 +30,13 @@ body {
     animation: Animationn 14s ease infinite;
   }
   h2 {
-    color: white;
+    color: rgb(0, 0, 0);
     margin-left: 25%;
     width: 66%;
     text-align: center;
   }
   table {
-    color: white;
+    color: rgb(0, 0, 0);
     margin-left: 30%;
     width: 66%;
     height: 80%;
@@ -44,19 +44,20 @@ body {
     font-size: 120%;
   }
   td {
-    padding-right: 5vw;
+    border-bottom: 1px solid rgb(202, 200, 200) !important;
+    
   }
   .border-2px{
-	border-bottom: 3px solid #afafaf !important;
+  border-bottom: 3px solid #6e6868 !important;
   }
   #pageContainer{
-	background-color:#000000;
+  background-color:#edf3e3;
   height: 90%;
   min-height: 700px;
-	margin-top: 15px;
-	margin-bottom:15px;
-	border-radius:6px;
-	border:1px solid #4a4a4a;
+  margin-top: 15px;
+  margin-bottom:15px;
+  border-radius:6px;
+  border: 1px solid #c9c9c9;
   }
   #searchButton{
     font-family: "Orbitron";
@@ -141,7 +142,7 @@ body {
     box-shadow: inset 0 0 5px grey; 
     border-radius: 10px;
   }
-   
+  
   /* Handle */
   ::-webkit-scrollbar-thumb {
     background: rgb(216, 216, 216); 
@@ -151,5 +152,4 @@ body {
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     background: #7f8081; 
-}
-
+  }
