--- a/style.css
+++ b/style.css
@@ -111,14 +111,14 @@ body {
       top: 25px;
     }
     table {
-      color: white;
+      color: rgb(0, 0, 0);
       height: 80%;
       margin-left: 20%;
       text-align: left;
       font-size: 100%;
     } 
     h2 {
-      color: white;
+      color: rgb(0, 0, 0);
       margin-left: 15%;
       text-align: center;
       font-size: 120%;
