--- a/style.css
+++ b/style.css
@@ -41,11 +41,13 @@ body {
     width: 66%;
     height: 80%;
     text-align: left;
-    font-size: 120%;
+    font-size: 2.3vh;
   }
   td {
     border-bottom: 1px solid rgb(202, 200, 200) !important;
-    
+  }
+  th {
+    max-width: 8vw;
   }
   .border-2px{
   border-bottom: 3px solid #6e6868 !important;
@@ -149,10 +151,6 @@ body {
     border-radius: 10px;
   }
   
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #7f8081; 
-  }
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     background: #7f8081; 
